[package]
name = "malory"
version = "0.1.0"
authors = ["Denis Tsai <dt665m@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/dt665m/malory-rs"
description = """
An tool to benchmark Async Functions (Futures)
"""
categories = ["development-tools"]
keywords = ["async", "test", "bench", "benchmark"]

[dependencies]
# tokio = { version = "1", features = ["signal", "macros", "sync", "time", "rt-multi-thread"] }
tokio = { version = "0.2.22", features = ["sync", "signal", "rt-core", "rt-threaded", "net", "stream", "time", "macros"] }

